--- a/src/components/ListItemIcon/ListItemIcon.module.scss
+++ b/src/components/ListItemIcon/ListItemIcon.module.scss
@@ -7,10 +7,10 @@
   color: var(--primary-text-color);
 }
 
-.listItemIconStart {
+.start {
   margin-right: var(--spacing-small);
 }
 
-.listItemIconEnd {
+.end {
   margin-left: var(--spacing-small);
 }
