--- a/src/components/Link/Link.module.scss
+++ b/src/components/Link/Link.module.scss
@@ -3,7 +3,7 @@
 @import "../../styles/global-css-settings";
 @import "../../styles/states";
 
-.mondayStyleLink {
+.link {
   display: flex;
   align-items: center;
   @include theme-prop(color, link-color);
@@ -13,37 +13,37 @@
   @include focus-style();
 }
 
-.mondayStyleLink:hover .mondayStyleLinkText {
+.link:hover .linkText {
   text-decoration: underline;
 }
 
-.mondayStyleLink.inlineText {
+.inlineText {
   display: inline-flex;
   align-items: unset;
 }
 
-.mondayStyleLink.inheritFontSize {
+.inheritFontSize {
   font-size: inherit;
   line-height: inherit;
 }
 
-.mondayStyleLinkIconStart {
+.iconStart {
   line-height: 24px;
   margin-right: $spacing-small;
 }
 
-.mondayStyleLinkIconEnd {
+.iconEnd {
   line-height: 24px;
   margin-left: $spacing-small;
 }
 
 @supports (margin-inline-start: initial) {
-  .mondayStyleLinkIconStart {
+  .iconStart {
     line-height: 24px;
     margin-right: 0;
     margin-inline-end: $spacing-small;
   }
-  .mondayStyleLinkIconEnd {
+  .iconEnd {
     line-height: 24px;
     margin-left: 0;
     margin-inline-start: $spacing-small;
