--- a/src/components/EditableInput/EditableInput.module.scss
+++ b/src/components/EditableInput/EditableInput.module.scss
@@ -2,7 +2,7 @@
 @import "../../styles/typography";
 @import "../../styles/global-css-settings";
 
-.editableInputWrapper {
+.wrapper {
   @include theme-prop(background-color, primary-background-color);
   display: inline-block;
   width: 100%;
@@ -16,12 +16,9 @@
   @include theme-prop(border-color, primary-color);
   vertical-align: top;
   text-align: left;
-}
-
-.editableInputWrapper.noResize {
-  resize: none;
-}
-
-.editableInputWrapper {
   @include font-default();
+}
+
+.noResize {
+  resize: none;
 }
