--- a/src/components/ExpandCollapse/ExpandCollapse.module.scss
+++ b/src/components/ExpandCollapse/ExpandCollapse.module.scss
@@ -3,7 +3,7 @@
 @import "../../styles/states";
 @import "../../styles/global-css-settings";
 
-.expandCollapseWrapper .expandCollapse {
+.wrapper .expandCollapse {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -16,7 +16,7 @@
   border-radius: $border-radius-small;
 }
 
-.expandCollapseWrapper .expandCollapseHeader {
+.wrapper .header {
   @include reset-button();
   padding: $spacing-medium;
   display: flex;
@@ -25,42 +25,42 @@
   cursor: pointer;
 }
 
-.expandCollapseWrapper .expandCollapseHeader:hover {
+.wrapper .header:hover {
   @include theme-prop(background-color, primary-background-hover-color);
 }
 
-.expandCollapseWrapper .expandCollapseHeader .expandCollapseHeaderContent {
+.wrapper .header .headerContent {
   margin: 0;
 }
 
-.expandCollapseWrapper .expandCollapseHeader .iconComponent {
+.wrapper .header .iconComponent {
   @include theme-prop(color, icon-color);
 }
 
-.expandCollapseWrapper .expandCollapseHeaderOpen {
+.wrapper .headerOpen {
   border-bottom: 1px solid;
   @include theme-prop(border-color, ui-border-color);
 }
 
-.expandCollapseWrapper .expandCollapseContent {
+.wrapper .content {
   padding: $spacing-medium;
 }
 
-.expandCollapseWrapper .expandCollapseSection {
+.wrapper .section {
   width: 100%;
 }
 
-.expandCollapseWrapper .animateIconOpen {
+.wrapper .animateIconOpen {
   transform: rotate(-180deg);
   transition: transform var(--motion-expressive-short) var(--motion-timing-transition);
 }
 
-.expandCollapseWrapper .animateIconClose {
+.wrapper .animateIconClose {
   transform: rotate(-360deg);
   transition: transform var(--motion-expressive-short) var(--motion-timing-transition);
 }
 
-.expandCollapseWrapper .animateExpandCollapseContent {
+.wrapper .animateExpandCollapseContent {
   animation: expandContentAnimation var(--motion-productive-medium) var(--motion-timing-enter);
 }
 
