--- a/src/components/FieldLabel/FieldLabel.module.scss
+++ b/src/components/FieldLabel/FieldLabel.module.scss
@@ -8,14 +8,14 @@
   align-items: center;
 }
 
-.fieldLabel .icon {
+.icon {
   margin: 0 var(--spacing-small) 0 var(--spacing-xs);
   line-height: 24px;
   font-size: var(--font-size-general-label);
   @include theme-prop(color, icon-color);
 }
 
-.fieldLabel .text {
+.text {
   @include font-paragraph-bold();
   @include theme-prop(color, primary-text-color);
 }
