--- a/src/components/DialogContentContainer/DialogContentContainer.module.scss
+++ b/src/components/DialogContentContainer/DialogContentContainer.module.scss
@@ -6,25 +6,25 @@
   outline: none;
 }
 
-.dialogContentContainerSmall {
+.small {
   padding: $spacing-small;
 }
 
-.dialogContentContainerMedium {
+.medium {
   padding: $spacing-small;
 }
 
-.dialogContentContainerLarge {
+.large {
   padding: $spacing-large;
 }
 
-.dialogContentContainerPopover {
+.popover {
   @include theme-prop(box-shadow, box-shadow-medium);
   border-radius: var(--border-radius-medium);
   @include theme-prop(background-color, secondary-background-color);
 }
 
-.dialogContentContainerModal {
+.modal {
   @include theme-prop(box-shadow, box-shadow-large);
   border-radius: var(--border-radius-big);
   @include theme-prop(background-color, primary-background-color);
