Support new dropdown state for displaying menu inside scrollable dialog

--- a/src/components/Dropdown/components/menu/menu.scss
+++ b/src/components/Dropdown/components/menu/menu.scss
@@ -2,7 +2,11 @@
 @import "../../../../styles/global-css-settings";
 
 .dropdown-menu-wrapper {
+ // top:65px !important;
   animation: fadeIn var(--motion-productive-medium) var(--motion-timing-enter);
+  &--inside-scroll {
+    position: fixed !important;
+  }
 }
 
 @keyframes fadeIn {
