--- a/src/components/Dropdown/components/menu/menu.scss
+++ b/src/components/Dropdown/components/menu/menu.scss
@@ -2,9 +2,9 @@
 @import "../../../../styles/global-css-settings";
 
 .dropdown-menu-wrapper {
- // top:65px !important;
   animation: fadeIn var(--motion-productive-medium) var(--motion-timing-enter);
   &--inside-scroll {
+    // When inside a scrollable area, we want the menu to appear above the scrollable container (we set the specific position by js)
     position: fixed !important;
   }
 }
