--- a/src/components/Dropdown/components/menu/menu.scss
+++ b/src/components/Dropdown/components/menu/menu.scss
@@ -3,6 +3,10 @@
 
 .dropdown-menu-wrapper {
   animation: fadeIn var(--motion-productive-medium) var(--motion-timing-enter);
+  &--inside-scroll {
+    // When inside a scrollable area, we want the menu to appear above the scrollable container (we set the specific position by js)
+    position: fixed !important;
+  }
 }
 
 @keyframes fadeIn {
