--- a/src/components/Menu/MenuDivider/MenuDivider.module.scss
+++ b/src/components/Menu/MenuDivider/MenuDivider.module.scss
@@ -1,6 +1,6 @@
 @import "../../../styles/global-css-settings";
 
-.menu-child-divider {
+.divider {
   margin-left: -$spacing-small;
   width: calc(100% + #{$spacing-small * 2});
 }
