Feature/sergeyro/disable styleint rule for global pseudo class (#845)
* Disable styleint rule for global pseudo class

* Add changes to test

* Fix rule

* Remove changes for test

--- a/src/components/Chips/Chips.module.scss
+++ b/src/components/Chips/Chips.module.scss
@@ -30,7 +30,8 @@
     padding-right: var(--spacing-xs);
   }
 
-  .icon, .avatar {
+  .icon,
+  .avatar {
     &.left {
       margin-right: var(--spacing-xs);
     }
