--- a/src/components/Dropdown/components/menu/menu.scss
+++ b/src/components/Dropdown/components/menu/menu.scss
@@ -3,7 +3,7 @@
 
 .dropdown-menu-wrapper {
   animation: fadeIn var(--motion-productive-medium) var(--motion-timing-enter);
-  &--inside-scroll {
+  &--fixed-position {
     // When inside a scrollable area, we want the menu to appear above the scrollable container (we set the specific position by js)
     position: fixed !important;
   }
