fixed some styling issues + update from master

--- a/src/components/ModalHeader/ModalHeader.module.scss
+++ b/src/components/ModalHeader/ModalHeader.module.scss
@@ -20,6 +20,7 @@
 
   .description {
     font: var(--font-subtext);
+    color: var(--primary-text-color);
     margin-block-start: var(--spacing-small);
   }
 
