--- a/src/components/Icon/Icon.module.scss
+++ b/src/components/Icon/Icon.module.scss
@@ -1,17 +1,17 @@
 @import "../../styles/themes";
 
-.iconComponent {
+.icon {
   position: relative;
 }
 
-.iconComponent:before {
+.icon:before {
   text-decoration: none !important;
 }
 
-.iconComponentNoFocusStyle:focus {
+.noFocusStyle:focus {
   outline: none;
 }
 
-.iconComponentClickable {
+.clickable {
   cursor: pointer;
 }
